# ez-agentic-study-buddy

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  USAGE.md  conftest.py  package-lock.json  pyproject.toml
.github/prompts/: architecture.md  frontend-design.instructions.md
.github/workflows/: ci.yml
LEARNINGS/: step-1-state-management.md  step-10-quiz-workflow.md  step-11-decision-rules.md  step-12-react-loop.md  step-13-adapter-tool.md  step-14-retry-mechanisms.md  step-15-lcel-refactoring.md  step-16-testing-edge-cases.md  step-2-llm-client-setup.md  step-3-core-agent-skeleton.md  step-4-planner-tool.md  step-5-manual-tool-calling.md  step-6-teacher-tool.md  step-7-state-updates.md  step-8-quizzer-tool.md  step-9-evaluator-tool.md
LEARNINGS/CONCEPTS/: agentic-frameworks-overview.md  (+11 more)
scripts/: test_adapter.py  test_agent_workflow_interactions.py  test_content_loader.py  test_decision_rules.py  test_decision_rules_extended.py  test_end_to_end.py  test_evaluator.py  test_lcel_chains.py  test_llm.py  test_manual_tool_calling.py  test_planner.py  test_quiz_workflow.py  test_quizzer.py  test_quizzer_schema_validation.py  test_react_loop.py  test_retry_mechanisms.py  test_state_model.py  test_state_updates.py  test_teacher.py  test_teacher_json_parse.py  test_topic_suggestion.py  test_webapi_sessions.py
webapi/: README.md  main.py
webui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
(+45 files in other folders)
